# word-separation-tool

./: .editorconfig  README.md  pyproject.toml
word_separation_tool/: separation.py
word_separation_tool/separator/: separation_text.py  separator.py
