[tool.poetry]
name = "word-separation-tool"
version = "1.0.0"
description = "The tool for testing word separation."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Janome = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
